--- a/Dbarone.Net.Extensions.Reflection/Dbarone.Net.Extensions.Reflection.csproj
+++ b/Dbarone.Net.Extensions.Reflection/Dbarone.Net.Extensions.Reflection.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -17,5 +18,6 @@
 
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    <None Include="..\Documentation.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 </Project>
